--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "document-register-element": "1.13.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "twitch": "^4.3.6",
+    "twitch-pubsub-client": "^4.3.6"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
